<?xml version="1.0"?>
<package format="2">
  <name>tricycle_controller</name>
  <version>0.0.0</version>
  <description>The tricycle_controller package</description>
  <maintainer email="txphuc02071999@gmail.com">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>liburdfdom-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>liburdfdom-dev</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>liburdfdom-dev</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/tricycle_controller_plugins.xml"/>
  </export>
</package>
